<resources>
    <string name="app_name" translatable="false">Logistic Cavan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="orders_title">My Orders</string>
    <string name="pending_text">Your order is currently being prepared and will be on its way soon! You will be notified once it’s ready and on the way to you.</string>
    <string name="shipped_text">Your order is shipped! The order is on the road to you.</string>
    <string name="delieverd_text">Your order is already delivered!\\n We hope you enjoyed your meal!</string>
    <string name="courier_name">" Courier"</string>
    <string name="rating">Give rate</string>
    <string name="rating_restaurant_details">Rating</string>
    <string name="group_order">Group order</string>
    <string name="search_text">Search here...</string>
    <string name="caravan_items_text">Caravan</string>
    <string name="home_title">Home</string>
    <string name="orders_item">Orders</string>
    <string name="notifications_item">Notifications</string>
    <string name="profile_item">Profile</string>
    <string name="personal_info_txt">Personal information</string>
    <string name="how_message">How the Logistic Caravan works</string>
    <string name="logout_text">Log Out</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="address_text">Address</string>
    <string name="phone_num_text">Phone Number</string>
    <string name="email_text">Email</string>
    <string name="change_password_text">Change Password</string>
    <string name="shared_cart_fragment_title">Group Cart</string>
    <string name="add_user_email_ed">Add user email...</string>
    <string name="delete_shared_product_text">Delete</string>
    <string name="add_user_email_btn_txt">Add user</string>
    <string name="start_new_cart_text">Start a new cart?</string>
    <string name="start_new_cat_message">A new order will clear your cart with</string>
    <string name="start">start</string>
    <string name="cancel">cancel</string>
    <string name="search_here">Search here...</string>
    <string name="active">Active</string>
    <string name="shiped">Shiped</string>
    <string name="delivered">Delivered</string>
    <string name="expired">Expired</string>
    <string name="scheduled_active_orders">Scheduled Active Orders</string>
    <string name="get_your_order_details_below">Get your order details below</string>
    <string name="customers">Customers</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_address2">Delivery Address</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="items">Items</string>
    <string name="your_items">Your items</string>
    <string name="start_delivery">Start delivery</string>
    <string name="start_delivery1">Start delivery</string>
    <string name="update_status">Update Status</string>
    <string name="shipped">Shipped</string>
    <string name="product_id">Product ID</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="removal_date">Removal Date</string>
    <string name="alerts">Alerts</string>
    <string name="no_data">No Data</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="customer">Customer</string>
    <string name="courier">Courier</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_have_an_account">Don’t have have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="enter_your_first_ame">Enter Your First ame</string>
    <string name="last_name">Last Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="adress">Adress</string>
    <string name="enter_your_adress">Enter your Adress</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone">Enter your Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="first_name_required">First name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="address_required">Address is required</string>
    <string name="phone_required">Phone number is required</string>
    <string name="invalid_phone">Enter a valid phone number</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Enter a valid email</string>
    <string name="password_required">Password is required</string>
    <string name="password_length">Password must be at least 6 characters</string>
    <string name="confirm_password_required">Please confirm your password</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="shipped_orders">Shipped Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="name">Name</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
        <string name="reset_password_instruction">Enter your email to send a reset password link</string>
        <string name="enter_email_hint">Enter your email</string>
        <string name="send_button">Send</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="product">Product</string>
    <string name="status_product_is_still_on_shelf">Product is still on shelf</string>
    <string name="product_has_been_removed">Product has been removed</string>

</resources>