<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="#2F4D8B"
        android:layout_height="match_parent"
        tools:context=".auth.presentation.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/image_background2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".auth.presentation.LoginFragment">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/image_background2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/corner_top_lift_right"
                android:padding="24dp"
                android:scrollbarSize="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="-16dp"
                    tools:layout_editor_absoluteY="228dp">

                    <TextView
                        android:id="@+id/textViewt212"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/first_name"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.268"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView212">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/corner_border_black"
                            android:ems="10"
                            android:hint="@string/enter_your_first_ame"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/ttextView212"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/last_name"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.268"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView212">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editLastName"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/corner_border_black"
                            android:ems="10"
                            android:hint="@string/enter_your_last_name"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView212"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/adress"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutAdress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.268"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView212">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editAdress"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/corner_border_black"
                            android:ems="10"
                            android:hint="@string/enter_your_adress"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/texutView212"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/phone"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.268"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView212">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editPhone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/corner_border_black"
                            android:ems="10"
                            android:hint="@string/enter_your_phone"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/email_address"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.268"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/corner_border_black"
                            android:ems="10"
                            android:hint="@string/enter_your_email"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView25"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textSize="16sp"
                        android:textColor="@color/black"

                        android:layout_marginTop="4dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:endIconMode="password_toggle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView25">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editPassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/corner_border_black"
                            android:ems="10"
                            android:hint="@string/enter_your_password"
                            android:inputType="textPassword"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/fdsfadf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="4dp"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPassword" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputLayoutConfirmPassworde"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        app:endIconMode="password_toggle"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.124"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fdsfadf">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editPasswordConfirme"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/corner_border_black"
                            android:ems="10"
                            android:hint="@string/enter_your_password"
                            android:inputType="textPassword"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="100dp"
                        android:background="@drawable/corner_border_red"
                        android:backgroundTint="#E55763"
                        android:gravity="center"
                        android:padding="12dp"
                        android:text="@string/sign_up"
                        android:textColor="#0E3C51"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"

                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutConfirmPassworde" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="82dp"
                            android:text="@string/do_you_have_an_account"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/signUp" />

                        <TextView
                            android:id="@+id/signIn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_in"
                            android:textColor="#2F7442" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
